--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "StreamTube is a cutting-edge video streaming platform designed to deliver high-quality content to viewers around the globe.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "StreamTube",
@@ -15,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.4.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
