--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.4.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   }
 }
