--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4",
+    "mongoose-aggregate-paginate-v2": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
